2018-06-11  Antoine Quint  <graouts@apple.com>

        [Web Animations] Make imported/mozilla/css-transitions/test_setting-effect.html pass reliably
        https://bugs.webkit.org/show_bug.cgi?id=183850

        Unreviewed.

        This test is now passing.

        * TestExpectations:

2018-06-11  Antoine Quint  <graouts@apple.com>

        [Web Animations] Make imported/mozilla/css-animations/test_setting-effect.html pass reliably
        https://bugs.webkit.org/show_bug.cgi?id=183849

        Unreviewed.

        This test is now passing.

        * TestExpectations:

2018-06-11  Antoine Quint  <graouts@apple.com>

        [Web Animations] Make imported/mozilla/css-animations/test_cssanimation-animationname.html pass reliably
        https://bugs.webkit.org/show_bug.cgi?id=183838

        Unreviewed.

        This test is now passing.

        * TestExpectations:

2018-06-11  Antoine Quint  <graouts@apple.com>

        [Web Animations] Make imported/mozilla/css-transitions/test_csstransition-transitionproperty.html pass reliably
        https://bugs.webkit.org/show_bug.cgi?id=183835

        Unreviewed.

        This test is now passing.

        * TestExpectations:

2018-06-11  Antoine Quint  <graouts@apple.com>

        [Web Animations] Make imported/mozilla/css-transitions/test_animation-starttime.html pass reliably
        https://bugs.webkit.org/show_bug.cgi?id=183833

        Unreviewed.

        This test is now passing.

        * TestExpectations:

2018-06-11  Antoine Quint  <graouts@apple.com>

        [Web Animations] Make imported/mozilla/css-animations/test_animation-reverse.html pass reliably
        https://bugs.webkit.org/show_bug.cgi?id=183832

        Unreviewed.

        This test is now passing.

        * TestExpectations:

2018-06-11  Antoine Quint  <graouts@apple.com>

        [Web Animations] Make imported/mozilla/css-transitions/test_animation-pausing.html pass reliably
        https://bugs.webkit.org/show_bug.cgi?id=183829
