@@ -1,3 +1,12 @@
+2018-06-11  Philippe Normand  <pnormand@igalia.com>
+
+        [webkitpy] PHP7.2 support on Debian platforms
+        https://bugs.webkit.org/show_bug.cgi?id=186521
+
+        Reviewed by Michael Catanzaro.
+
+        * http/conf/debian-httpd-2.4-php7.2.conf: Added.
+
 2018-06-11  Antoine Quint  <graouts@apple.com>
 
         [Web Animations] Make imported/mozilla/css-transitions/test_setting-effect.html pass reliably
